<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/score_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.android.courtcounter.MainActivity">

            <EditText
                android:id="@+id/player_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="false"
                android:gravity="center_horizontal"
                android:imeActionLabel="Done"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:padding="4dp"
                android:text="@string/player1"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/player_1_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="56sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:text="@string/game_count"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/game_count_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:paddingLeft="8dp"
                    android:text="@string/set_count"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/set_count_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="fifteenScore"
                android:tag="1"
                android:text="@string/fifteen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="thirtyScore"
                android:tag="1"
                android:text="@string/thirty" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="fortyScore"
                android:tag="1"
                android:text="@string/forty" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="advantageScore"
                android:tag="1"
                android:text="@string/advantage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="gameScore"
                    android:tag="1"
                    android:text="@string/game" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setScore"
                    android:tag="1"
                    android:text="@string/set" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.android.courtcounter.MainActivity">

            <EditText
                android:id="@+id/player_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="false"
                android:gravity="center_horizontal"
                android:imeActionLabel="Done"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:padding="4dp"
                android:text="@string/player1"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/player_2_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="56sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:text="@string/game_count"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/game_count_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:paddingLeft="8dp"
                    android:text="@string/set_count"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/set_count_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="fifteenScore"
                android:tag="2"
                android:text="@string/fifteen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="thirtyScore"
                android:tag="2"
                android:text="@string/thirty" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="fortyScore"
                android:tag="2"
                android:text="@string/forty" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="advantageScore"
                android:tag="2"
                android:text="@string/advantage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="gameScore"
                    android:tag="2"
                    android:text="@string/game" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setScore"
                    android:tag="2"
                    android:text="@string/set" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serve_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_table"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="Serve:"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/serving_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player 1"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="reset"
        android:text="@string/reset" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:scaleType="centerInside"
        android:src="@drawable/side_ball" />
</RelativeLayout>

